--- a/style.css
+++ b/style.css
@@ -45,14 +45,13 @@ body{
 
 #instruction-text{
     position: absolute;
-    top: 62%;
+    top: 66%;
     color: #333;
     width: 300px;
     text-align: center;
     text-transform: capitalize;
     padding: 30px;
     margin: 0;
-    
 }
 
 .scores{
@@ -92,4 +91,47 @@ body{
     height: 290px;
     top: 33%;
     background-color: #ff6347;
+}
+
+/* Media Query for Small Screens */
+@media (max-width: 600px) {
+    #game-board {
+        grid-template-columns: repeat(20, 17px); /* Smaller grid cells */
+        grid-template-rows: repeat(20, 17px);
+        margin: 5px;
+    }
+
+    .game-border-1{
+        border: #ff6347 solid 10px;
+        border-radius: 30px;
+        box-shadow: inset 0 0 0 10px #ff4500;
+    }
+    
+    .game-border-2{
+        border: #00ced1 solid 8px;
+        border-radius: 26px;
+        box-shadow: inset 0 0 0 10px #20b2aa;
+    }
+    
+    .game-border-3{
+        border: #ffa07a solid 10px;
+        border-radius: 20px;
+        box-shadow: inset 0 0 0 5px #f08080;
+    }
+
+    #instruction-text {
+        top: 66%;
+        font-size: 25px;
+        padding: 20px;
+    }
+
+    #score, #highScore {
+        font-size: 25px; /* Smaller font size */
+    }
+
+    #logo {
+        width: 300px; /* Smaller logo */
+        height: 250px;
+        top: 33%;
+    }
 }
