--- a/style.css
+++ b/style.css
@@ -93,36 +93,44 @@ body{
     background-color: #ff6347;
 }
 
-/* Media Query for Small Screens */
+
+/* @media (max-width: 600px)*/
+
 @media (max-width: 600px) {
     #game-board {
-        grid-template-columns: repeat(20, 17px); /* Smaller grid cells */
-        grid-template-rows: repeat(20, 17px);
+        grid-template-columns: repeat(20, 15px); /* Smaller grid cells */
+        grid-template-rows: repeat(20, 15px);
         margin: 5px;
     }
 
     .game-border-1{
-        border: #ff6347 solid 10px;
-        border-radius: 30px;
+        border: #ff6347 solid 8px;
+        border-radius: 20px;
         box-shadow: inset 0 0 0 10px #ff4500;
     }
     
     .game-border-2{
-        border: #00ced1 solid 8px;
-        border-radius: 26px;
+        border: #00ced1 solid 5px;
+        border-radius: 20px;
         box-shadow: inset 0 0 0 10px #20b2aa;
     }
     
     .game-border-3{
-        border: #ffa07a solid 10px;
+        border: #ffa07a solid 5px;
         border-radius: 20px;
         box-shadow: inset 0 0 0 5px #f08080;
     }
 
-    #instruction-text {
+    #instruction-text{
+        position: absolute;
         top: 66%;
-        font-size: 25px;
-        padding: 20px;
+        color: #333;
+        width: 200px;
+        text-align: center;
+        text-transform: capitalize;
+        padding: 30px;
+        margin: 0;
+        font-size: 20px;
     }
 
     #score, #highScore {
@@ -130,8 +138,8 @@ body{
     }
 
     #logo {
-        width: 300px; /* Smaller logo */
-        height: 250px;
+        width: 200px; /* Smaller logo */
+        height: 150px;
         top: 33%;
     }
 }
